feat: added features and stability fixes
